finish whit bonus

--- a/src/main/resources/templates/Pizze/List.html
+++ b/src/main/resources/templates/Pizze/List.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Le Nostre Pizze</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-<h1>Le Nostre Pizze</h1>
+
+<body class="bg-dark">
+<div class="container">
+    <div class="row text-center mt-3">
+        <h1 class="text-warning">Le Nostre Pizze</h1>
+    </div>
+    <hr class="text-warning">
+    <div class="row">
+        <div class="col-md-4 text-center" th:each="pizza : ${pizze}">
+            <div class="card p-3 mb-2 m-auto" style="width: 18rem;">
+                <img th:src="${pizza.image}" alt="Pizza Image"/>
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${pizza.name}">Nome Pizza</h5>
+                    <p class="card-text" th:text="${pizza.description}">Descrizione Pizza</p>
+                    <p class="card-text" th:text="'Prezzo: ' + ${pizza.price} + ' €'">Prezzo</p>
+                </div>
+            </div>
+        </div>
+        <hr class="text-warning">
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
