--- a/src/main/resources/templates/Pizze/List.html
+++ b/src/main/resources/templates/Pizze/List.html
@@ -19,8 +19,8 @@
                 <img th:src="${pizza.image}" alt="Pizza Image"/>
                 <div class="card-body">
                     <h5 class="card-title" th:text="${pizza.name}">Nome Pizza</h5>
-                    <p class="card-text" th:text="${pizza.description}">Descrizione Pizza</p>
                     <p class="card-text" th:text="'Prezzo: ' + ${pizza.price} + ' €'">Prezzo</p>
+                    <a th:href="@{/Pizze/show/{id}(id=${pizza.id})}" class="btn btn-primary">Dettagli</a>
                 </div>
             </div>
         </div>
