--- a/src/main/resources/templates/pizze/List.html
+++ b/src/main/resources/templates/pizze/List.html
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <h5 class="card-title" th:text="${pizza.name}">Nome Pizza</h5>
                     <p class="card-text" th:text="'Prezzo: ' + ${pizza.price} + ' €'">Prezzo</p>
-                    <a th:href="@{/pizze/show/{id}(id=${pizza.id})}" class="btn btn-primary">Dettagli</a>
+                    <a th:href="@{/show/{id}(id=${pizza.id})}" class="btn btn-primary">Dettagli</a>
                 </div>
             </div>
         </div>
