--- a/src/main/resources/templates/pizze/detail.html
+++ b/src/main/resources/templates/pizze/detail.html
@@ -3,8 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Pizza</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-<h1 th:text="${pizza.name}"></h1>
+<body class="bg-dark">
+<div class="row text-center mt-3 mb-0">
+    <h1 class="text-warning" th:text="${pizza.name}"></h1>
+</div>
+<div class="d-flex m-auto">
+    <div class="m-auto">
+        <img th:src="${pizza.image}" alt="Pizza Image" class="m-5 mb-0 mt-0 img-fluid flex-shrink-0"
+             style="height: 300px;"/>
+
+        <div class="text-center">
+            <h2 class="text-decoration-underline text-warning">INGREDIENTI</h2>
+            <p th:text="${pizza.description}" class="text-white"></p>
+        </div>
+    </div>
+</div>
+<div class="text-center">
+    <a th:href="@{/}" class="text-warning"> &lt;&lt; Le Nostre Pizze</a>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 </html>
