--- a/src/main/resources/templates/pizze/List.html
+++ b/src/main/resources/templates/pizze/List.html
@@ -11,7 +11,12 @@
 
 <div class="container">
     <div class="row text-center mt-3">
-        <h1 class="text-warning">Le Nostre Pizze</h1>
+        <div>
+            <h1 class="text-warning">Le Nostre Pizze</h1>
+        </div>
+        <div>
+            <a href="/create" class="col-md-3 btn btn-warning">Aggiungi Pizza</a>
+        </div>
     </div>
     <hr class="text-warning">
     <div class="row">
@@ -27,6 +32,7 @@
         </div>
         <hr class="text-warning">
     </div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
