--- a/src/main/resources/templates/pizze/detail.html
+++ b/src/main/resources/templates/pizze/detail.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Pizza</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+<head th:replace="fragments/script :: head('Details')"></head>
 <body class="bg-dark">
+<nav th:replace="fragments/navbar :: navbar"></nav>
 <div class="row text-center mt-3 mb-0">
     <h1 class="text-warning" th:text="${pizza.name}"></h1>
 </div>
@@ -26,8 +22,6 @@
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+<th:block th:replace="fragments/script :: scriptBody"></th:block>
 </body>
 </html>
