--- a/src/main/resources/templates/pizze/form.html
+++ b/src/main/resources/templates/pizze/form.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Pizza Form</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+<head th:replace="fragments/script :: head('Add Pizza')"></head>
 <body class="bg-dark">
+<nav th:replace="fragments/navbar :: navbar"></nav>
 <div class="container">
     <h1 class="text-warning text-center mt-3">Aggiungi una Pizza</h1>
     <hr class="text-warning">
@@ -23,6 +18,11 @@
                 <label for="name" class="form-label text-warning">Name</label>
                 <input type="text" class="form-control" id="name" th:field="*{name}" required
                        th:errorClass="is-invalid">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('name')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('name')}" th:text="${err}"></li>
+                    </ul>
+                </div>
             </div>
 
 
@@ -30,6 +30,11 @@
                 <label for="description" class="form-label text-warning">Description</label>
                 <input type="text" class="form-control" id="description" th:field="*{description}" required
                        th:errorClass="is-invalid">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('description')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('description')}" th:text="${err}"></li>
+                    </ul>
+                </div>
             </div>
 
 
@@ -37,6 +42,11 @@
                 <label for="image" class="form-label text-warning">Image URL</label>
                 <input type="text" class="form-control" id="image" th:field="*{image}" required
                        th:errorClass="is-invalid">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('image')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('image')}" th:text="${err}"></li>
+                    </ul>
+                </div>
             </div>
 
 
@@ -44,6 +54,11 @@
                 <label for="price" class="form-label text-warning">Price</label>
                 <input type="text" class="form-control" id="price" th:field="*{price}" required
                        th:errorClass="is-invalid">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('price')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('price')}" th:text="${err}"></li>
+                    </ul>
+                </div>
             </div>
 
             <div class="mb-3">
@@ -55,8 +70,6 @@
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-</bodybg-dark>
+<th:block th:replace="fragments/script :: scriptBody"></th:block>
+</body>
 </html>
