--- a/src/main/resources/templates/pizze/edit.html
+++ b/src/main/resources/templates/pizze/edit.html
@@ -54,8 +54,8 @@
             </div>
         </div>
         <div>
-            <button type="submit" class="btn btn-primary">Save</button>
-            <a class="btn btn-primary" th:href="@{/}">Cancel</a>
+            <button type="submit" class="btn btn-warning">Save</button>
+            <a class="btn btn-warning" th:href="@{/}">Cancel</a>
         </div>
     </form>
 </div>
