--- a/src/main/resources/templates/specialOffer/offerForm.html
+++ b/src/main/resources/templates/specialOffer/offerForm.html
@@ -52,7 +52,7 @@
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox"
                                th:id="${pizza.id}"
-                               th:name="pizzaId"
+                               th:name="pizzeId"
                                th:value="${pizza.id}">
                         <label class="form-check-label text-warning"
                                th:for="${pizza.id}"
@@ -61,6 +61,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="mt-3 mb-3">
                 <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-warning" th:href="@{/}">Cancel</a>
