--- a/src/main/resources/templates/pizze/List.html
+++ b/src/main/resources/templates/pizze/List.html
@@ -36,6 +36,8 @@
                 <div class="card-body">
                     <h5 class="card-title" th:text="${pizza.name}">Nome Pizza</h5>
                     <p class="card-text" th:text="'Prezzo: ' + ${pizza.price} + ' €'">Prezzo</p>
+                    <p class="card-text" th:if="${pizza.activeOffer != Null}"
+                       th:text="'Offerta Attiva: ' + ${pizza.specialOffer}"></p>
                     <div class="d-flex justify-content-around align-items-center">
                         <div class="m-2">
                             <a th:href="@{/show/{id}(id=${pizza.id})}" class="btn btn-warning">
@@ -59,6 +61,7 @@
                 </div>
             </div>
         </div>
+
         <hr class="text-warning">
     </div>
 
