add page list offer

--- a/src/main/resources/templates/pizze/List.html
+++ b/src/main/resources/templates/pizze/List.html
@@ -16,6 +16,7 @@
         </div>
         <div class="col">
             <a th:href="@{/special-offer}" class="btn btn-warning">Aggiungi Offerta</a>
+            <a th:href="@{/offer-list}" class="btn btn-warning">Lista Offerte</a>
         </div>
         <div class="col">
             <form th:action="@{/search}" method="get" class="d-flex align-items-center">
