--- a/src/main/resources/templates/specialOffer/offerList.html
+++ b/src/main/resources/templates/specialOffer/offerList.html
@@ -8,26 +8,51 @@
     <h1 class="text-warning mt-3">Lista Offerte Attive</h1>
     <hr class="text-warning">
 </div>
-<div class="container">
+<div class="container" th:if="${#lists.size(specialOffer) > 0}">
     <table class="table table-dark table-striped" th:each="specialOffer : ${specialOffer}">
         <thead>
         <tr>
             <th class="text-warning" scope="col">Offer Title</th>
             <th class="text-warning" scope="col">Start Date</th>
             <th class="text-warning" scope="col">Finish Date</th>
+            <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
-        <tr>
+        <tr class="align-items-center">
             <td th:text="${specialOffer.offerTitle}"></td>
             <td th:text="${specialOffer.startDate}"></td>
             <td th:text="${specialOffer.finishDate}"></td>
+            <td>
+                <div class="d-flex justify-content-center">
+                    <div class="m-2">
+                        <a th:href="@{/edit-offer/{id}(id=${specialOffer.id})}" class="btn btn-warning">
+                            <i class="fa-solid fa-pencil"></i>
+                        </a>
+                    </div>
+
+                    <div class="m-2">
+                        <form th:action="@{/delete-offer/{id}(id=${specialOffer.id})}" method="POST">
+                            <button type="submit" class="btn btn-warning">
+                                <i class="fa-solid fa-trash-can"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+
+            </td>
         </tr>
         </tbody>
     </table>
 </div>
 
+<div class="container" th:if="${#lists.size(specialOffer) == 0}">
+    <h2 class="text-white">Nessuna offerta attiva al momento.</h2>
+</div>
 
+<div class="text-center">
+    <a th:href="@{/}" class="text-warning"> &lt;&lt; Le Nostre Pizze</a>
+</div>
 <th:block th:replace="fragments/script :: scriptBody"></th:block>
 </body>
 </html>
