--- a/src/main/resources/templates/specialOffer/offerList.html
+++ b/src/main/resources/templates/specialOffer/offerList.html
@@ -9,7 +9,7 @@
     <hr class="text-warning">
 </div>
 <div class="container" th:if="${#lists.size(specialOffer) > 0}">
-    <table class="table table-dark table-striped" th:each="specialOffer : ${specialOffer}">
+    <table class="table table-dark table-striped">
         <thead>
         <tr>
             <th class="text-warning" scope="col">Offer Title</th>
@@ -19,7 +19,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr class="align-items-center">
+        <tr class="align-items-center" th:each="specialOffer : ${specialOffer}">
             <td th:text="${specialOffer.offerTitle}"></td>
             <td th:text="${specialOffer.startDate}"></td>
             <td th:text="${specialOffer.finishDate}"></td>
